tests/compile-fail/integration__integration__difficulty__diff_label_in_non_ecl.snap
---
source: tests/integration/difficulty.rs
expression: stderr
---
error: difficulty is not supported in this format
   ┌─ <input>:29:5
   │
29 │     {"012"}: int x = 1;
   │     ^^^^^^^^ difficulty label


